--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,8 +269,9 @@ main section div {
 .section7 article img {
   width: 6rem;
 }
-svg {
-  color: #fff;
+.angle {
+  fill: #8c979e;
+  width: 14px;
 }
 .section8 {
   padding: 8rem;
