--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 html {
   font-family: "raleway", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 14px;
+  scroll-behavior: smooth;
 }
 @font-face {
   font-family: "raleway";
@@ -14,6 +15,7 @@ html {
 body {
   width: 100vw;
 }
+
 h1 {
   font-size: 4rem;
   font-weight: 300;
