--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,12 +213,6 @@ main section div {
   padding-top: 7rem;
 }
 
-.section6 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 2rem;
-}
 .section6_title {
   display: flex;
   flex-direction: column;
@@ -229,20 +223,27 @@ main section div {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  gap: 0;
+  margin-bottom: 2rem;
   justify-content: center;
-  row-gap: 0;
+  align-items: center;
 }
-.gallery article {
-  height: 400px;
+.gallery article a {
+  height: 420px;
+  width: 620px;
 }
 .gallery img {
   width: 100%;
   height: 100%;
 }
+.gallery img:hover {
+  opacity: 0.7;
+  background-color: #000000;
+  transition: 0.5s;
+}
 
 .section7 {
-  background: url(../img/photo-1443527216320-7e744084f5a7-1.jpg.png) no-repeat
-    fixed center;
+  background: url(../img/background.jpg) no-repeat fixed center;
   background-size: cover;
   color: #fff;
   display: flex;
@@ -313,12 +314,18 @@ main section div {
   justify-content: space-evenly;
 }
 footer {
-  padding: 1rem;
+  padding: 2rem;
   background-color: #0e1015;
   color: #fff;
   display: flex;
   flex-direction: column;
   padding-top: 6rem;
+}
+footer ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
 }
 footer div {
   display: flex;
