--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
   box-sizing: border-box;
 }
 body {
-  width: 100vw;
+  width: 100%;
 }
 
 h1 {
@@ -29,6 +29,9 @@ h2 {
 
 p {
   line-height: 180%;
+}
+.burger-wrapper {
+  display: none;
 }
 header,
 nav {
@@ -119,16 +122,17 @@ main section div {
 
 .section2 {
   display: flex;
-  padding: 10rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
   align-items: center;
-  gap: 10rem;
+  gap: 5rem;
   justify-content: center;
 }
 
 .section2 div {
   display: flex;
   flex-direction: column;
-  width: 25rem;
+  width: 24rem;
   justify-content: center;
 }
 
@@ -150,9 +154,10 @@ main section div {
 
 .section3 {
   display: flex;
-  padding: 10rem;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
   align-items: center;
-  gap: 10rem;
+  gap: 5rem;
   justify-content: center;
   flex-direction: row-reverse;
   background-color: #f5f5f5;
@@ -161,7 +166,7 @@ main section div {
 .section3 div {
   display: flex;
   flex-direction: column;
-  width: 25rem;
+  width: 24rem;
   justify-content: center;
 }
 
