--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,8 @@ main section div {
   border: 2px solid #745cf9;
 }
 
-.section2 {
+.section2,
+.section3 {
   display: flex;
   padding-top: 10rem;
   padding-bottom: 10rem;
@@ -129,7 +130,12 @@ main section div {
   justify-content: center;
 }
 
-.section2 div {
+.section3 {
+  flex-direction: row-reverse;
+  background-color: #f5f5f5;
+}
+.section2 div,
+.section3 div {
   display: flex;
   flex-direction: column;
   width: 24rem;
@@ -152,36 +158,22 @@ main section div {
   color: #8c979e;
 }
 
-.section3 {
-  display: flex;
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-  align-items: center;
-  gap: 5rem;
-  justify-content: center;
-  flex-direction: row-reverse;
-  background-color: #f5f5f5;
-}
-
-.section3 div {
-  display: flex;
-  flex-direction: column;
-  width: 24rem;
-  justify-content: center;
-}
-
 .section4 {
   background: url(../img/section4.png) no-repeat center;
   background-size: cover;
   height: 450px;
   background-attachment: fixed;
-}
-.section4 div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 10rem;
+}
+.section4 div,
+.section5 div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .section4 p {
@@ -195,13 +187,6 @@ main section div {
   align-items: center;
   row-gap: 2rem;
   padding-top: 7rem;
-}
-.section5 div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50rem;
-  align-items: center;
 }
 
 .section5 p {
@@ -261,8 +246,8 @@ main section div {
 }
 .section7 div {
   display: flex;
-  width: 60rem;
   gap: 2rem;
+  width: 70rem;
   align-items: center;
   margin-top: 2rem;
 }
@@ -334,7 +319,8 @@ footer ul {
 }
 footer div {
   display: flex;
-  justify-content: space-around;
+  gap: 50rem;
+  justify-content: center;
   align-items: center;
 }
 .socialmedia_icons {
