--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ main section div {
   padding-top: 10rem;
   padding-bottom: 10rem;
   align-items: center;
-  gap: 5rem;
+  gap: 3rem;
   justify-content: center;
 }
 
@@ -140,6 +140,7 @@ main section div {
   flex-direction: column;
   width: 24rem;
   justify-content: center;
+  margin: 0 2rem;
 }
 
 .section2 h2,
@@ -249,6 +250,7 @@ main section div {
   gap: 2rem;
   width: 70rem;
   align-items: center;
+  justify-content: center;
   margin-top: 2rem;
 }
 
