footer align adjusted

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,7 +322,7 @@ footer ul {
 footer div {
   display: flex;
   gap: 50rem;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 .socialmedia_icons {
